tests/transpiler/x/java/for_map_collection.error
exit status 1
Main.java:19: error: for-each not applicable to expression type
        for (var k : m) {
                     ^
  required: array or java.lang.Iterable
  found:    Data1
1 error
